[package]
name = "wait-for-file"
version = "0.1.0"
edition = "2021"
authors = ["Erich Schroeter <erich.schroeter@gmail.com>"]
description = "A program that waits for files to exist before exiting."
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo", "string"] }
env_logger = "0.10.0"
log = "0.4.17"
path-clean = "0.1.0"
wait_file_created = "0.1.0"
